# trip-shiori

./: .coderabbit.yaml  .cursorignore  .dockerignore  .env.example  .gitattributes  .gitignore  Makefile  PROJECT_GUIDELINES.md  README.md  docker-compose.prod.yml  docker-compose.yml  jsondiffpatch.d.ts  package-lock.json  package.json  pnpm-workspace.yaml
.cursor/rules/: 01-typescript-coding-rules.mdc  02-component-tsdoc-style-guide.mdc  10-backend-api-tsdoc-rule.mdc  11-bizlogic-util-tsdoc-rule.mdc  12-api-documentation-rule.mdc  20-python-coding-rules.mdc  21-langchain-coding-rules.mdc  (+1 more)
.github/: pull_request_template.md
ai/: .env.example  Dockerfile  README.md  pyproject.toml
ai/app/: main.py
ai/app/core/: __init__.py  config.py
ai/app/models/: __init__.py  ai.py
ai/app/routers/: __init__.py  health.py  internal_ai.py
ai/app/services/: __init__.py  ai_langchain.py
backend/: .dockerignore  .env.example  .env.test.example  CAPROVER_DEPRECATED.md  Dockerfile  README.md  entrypoint.sh  eslint.config.js  jest.config.js  package-lock.json  package.json  tsconfig.json  tsconfig.test.json  typedoc.json
backend/python/: README.md  pyproject.toml  start.sh
backend/python/app/: __init__.py  main.py
backend/python/app/core/: config.py
backend/python/app/routers/: __init__.py  calc.py  health.py
backend/python/app/services/: ai_langchain.py
docs/: README.md  caprover-setup.md  ci-environment-setup.md  database-schema.md  emergency-cleanup.md  environment-variables.md  gcp-current-permissions.md  gcp-infrastructure.md  gcp-sa-setup-guide.md  github-actions-cleanup.md  github-actions-deployment.md  github-secrets-setup.md  openai-examples.md  openai-integration.md  quick-start.md  secret-manager-operations.md  secret-manager-setup.md  terraform-state-migration.md
frontend/: .dockerignore  .env.example  .env.local  Dockerfile  README.md  next.config.ts  package-lock.json  package.json  tsconfig.json  typedoc.json
scripts/: cleanup-github-actions.sh  create-secrets.sh  generate-favicons.sh  generate-secrets.sh  generate-tfvars.sh  setup-gcp-service-account.sh  setup-github-actions.sh
terraform/: README.md
(+229 files in other folders)
