[tool.poetry]
name = "fastapi-sidecar"
version = "0.1.0"
description = "FastAPI sidecar service for trip-shiori backend"
authors = ["trip-shiori team"]
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
langchain = "^0.3.27"
langchain-openai = "^0.3.35"
langchain-community = "^0.3.31"
langgraph = "^0.6.9"
tavily-python = "^0.7.12"
langchain-tavily = "^0.2.12"
httpx = "^0.28.1"
python-dotenv = "^1.1.1"
openai = "^1.51.0"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
black = "^23.11.0"
isort = "^5.12.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
